# ARM11-Assembler-and-Emulator

./: CMakeLists.txt
Extension/: Makefile  list_utils.c  login  login.c  login.h  login_details.txt  main  main.c  merchant  merchant.c  merchant.h  merchantID.txt  order.c  pay_receipt.c  runtest  runtest.c  send_email.py  test.id  test_suite.c  testsuite.c  todo_or_draft.c  types.h  unpaid_utils.c  userID.txt  utils  utils.c  utils.h
Extension/Merchants/bee/: 14:18:47_190620  menu.txt  test_cancel_order_expected.txt  test_edit_order_01_expected.txt  test_edit_order_0_expected.txt  test_pay_by_card.txt  test_pay_by_card_expected.txt  test_switch_user_expected.txt
Extension/Merchants/bhsz/: 01:22:11_170620  01:30:41_170620  01:39:32_170620  02:04:27_170620  02:16:34_170620  02:25:52_170620  11:21:29_170620  15:39:41_160620  15:49:22_160620  16:02:13_160620  16:09:02_160620  menu.txt  (+16 more)
Extension/Toolbox/: login.c  order.c  pay_receipt.c  runtest.c  send_email.py  types.h  unpaid_utils.c  utils.c
Extension/test_BRANDON/: example_id_2.txt  test_login.txt
Extension/tests/: README.txt  example_id_1.txt  login_details.txt  test  test_01.txt  test_cancel_order.txt  test_edit_order_01.txt  test_loader  test_loader.c  test_menu.txt  test_pay_by_card.txt  test_pay_by_ewallet.txt  test_switch_user.txt  test_take_order_01.txt  test_template.txt
Extension/text_outputs_and_inputs/: Usbhsz_140620
doc/: Checkpoint.tex  Report.tex
src/: Makefile  assemble.c  bin_loader.c  data_functions.c  data_functions.h  decode.c  decode.h  emulate.c  emulate.h  emulate.stats  execute.c  out  types.h  utils.c  utils.h
src/Lib/: projecttest.c  pt  utils.c  utils.h
src/assembler/: assemble.h  assemble_instruction_utils.c  assemble_instruction_utils.h  assemble_instructions.c  assemble_types.h  assemble_utils.c  assemble_utils.h  assembletypes.h  branch.c  dp.c  dp.h  dphelper.c  instruction_utils.c  instruction_utils.h  listfunctions.c  mult_assembler.c  program_utils.c  sdt.c  symbol_table_utils.c  tokenizer.c
src/emulator/: decode.c  emulate.h  emulate_instruction_utils.c  emulate_instruction_utils.h  emulate_types.h  emulate_utils.c  execute.c
src/extra_test_cases/: mul01.s  mul02.s  mul03.s
src/instructions/: branch.c  data_functions.c  data_processing.c  datafunctions.h  dataproctypes.h  halt.c  instructions.h  multiply.c  operandExtraction.c  operandExtraction.h  operand_extraction.c  operand_extraction.h  shifter.c  single_data_transfer.c
(+6 files in other folders)
